--- a/Links.html
+++ b/Links.html
@@ -321,6 +321,9 @@ div.tocify {
     <li>
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
+    <li>
+      <a href="LAB2.html">Lab 2: logistic growth</a>
+    </li>
   </ul>
 </li>
 <li>
