--- a/LECTURE5.html
+++ b/LECTURE5.html
@@ -320,6 +320,9 @@ div.tocify {
     <li>
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
+    <li>
+      <a href="LAB2.html">Lab 2: logistic growth</a>
+    </li>
   </ul>
 </li>
 <li>
@@ -344,6 +347,21 @@ div.tocify {
 </div>
 
 
+<div id="allee-effect" class="section level2">
+<h2>Allee Effect</h2>
+<div class="figure">
+<img src="prairie_dogs3.jpg" />
+
+</div>
+<p>What happens if density dependence goes the other way? What if an increase in density changes vital rates to produce an <em>increase</em> in the population growth rate <em>r</em>?</p>
+<p>Imagine a very social species, like prairie dogs. If the density is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher <em>d</em>. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems!</p>
+<p>This effect – whereby population growth rate may <strong>decrease</strong> when population size decreases – is called an <strong>Allee effect</strong>, named after ecologist <a href="https://en.wikipedia.org/wiki/Warder_Clyde_Allee">Warder Clyde Allee</a> (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.</p>
+<p>Interestingly, Allee’s interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was an anti-war activist!</p>
+<div class="figure">
+<img src="Allee1.jpg" />
+
+</div>
+<p>One of the most famous examples of a possible Allee effect involves the passenger pigeon (<em>Ectopistes migratorius</em>).</p>
 <div class="figure">
 <img src="PP2.jpg" />
 
@@ -359,6 +377,7 @@ div.tocify {
 
 </div>
 <p>What do passenger pigeons have to do with the Allee effect? Well, they were an extremely gregarious species. Once their numbers dwindled (due to hunting and clearcutting) their social systems broke down, and they could no longer effectively reproduce or avoid predators. Allee effects are generally bad news for conservation!</p>
+</div>
 <div id="in-class-exercise-logistic-growth" class="section level2">
 <h2>In-class exercise: logistic growth</h2>
 <p>First of all, from now on try to start saving your working InsightMaker models, since we will often be building from previous models (so we don’t have to start from scratch every class!)</p>
