--- a/schedule.html
+++ b/schedule.html
@@ -223,6 +223,9 @@ $(document).ready(function () {
     <li>
       <a href="LAB1.html">Lab 1: exponential growth</a>
     </li>
+    <li>
+      <a href="LAB2.html">Lab 2: logistic growth</a>
+    </li>
   </ul>
 </li>
 <li>
