--- a/LAB2.html
+++ b/LAB2.html
@@ -373,7 +373,7 @@ div.tocify {
 <p>1a. Describe two possible density-dependence mechanisms – that is, tell a plausible story about two hypothetical wildlife populations, one of which experiences <em>lower survival</em> (higher mortality) as densities increase and another that experiences <em>lower reproduction</em>. Have fun and be creative- we will not grade these on whether these mechanisms actually occur in nature- we just want to give you a chance to think about the many possible mechanisms that could potentially regulate wild populations. You can use real-world examples if you would rather- that is up to you.</p>
 <p>1b. For one of the above mechanisms, draw (on paper or electronically) two graphs to illustracte how this hypothetical mechanism might manifest at a population level: i. Abundance (Y axis) over time (X axis). ii. Vital rate (<em>b</em> or <em>d</em>) (Y axis) over abundance (X axis).</p>
 <p>For each graph, provide a short (1-2 sentences) description of why you think your hypothetical D-D mechanism would result in this relationship!</p>
-<p>NOTE: you can use a web app like <a href="https://awwapp.com/">“A web whiteboard”</a> to quickly and easily make and download sketches! I encourage you to use this method to embed your scetches in your submitted MS Word document.</p>
+<p>NOTE: you can use a web app like <a href="https://awwapp.com/">“A web whiteboard”</a> to quickly and easily make and download sketches! I encourage you to use this method, and to embed your sketches in your submitted MS Word document.</p>
 </div>
 <div id="exercise-2-determining-peruvian-anchovy-optimal-harvest-levels" class="section level2">
 <h2>Exercise 2: Determining Peruvian anchovy optimal harvest levels!</h2>
@@ -404,7 +404,7 @@ div.tocify {
 <li><p>Use the <strong>Settings</strong> button to change the <strong>Simulation Length</strong> to 24 and the timescale to “Months”. Click <strong>Simulate</strong>. You may need to click <strong>Configure</strong> in order to clean up your plot to just show <strong>Time</strong> on the x-axis and <strong>Anchovy Population</strong> on the y-axis.</p></li>
 <li><p>Next, let’s add an additional source of mortality (right now, we have natural baseline mortality (40% per year) and density-dependent effects). This new source of mortality is commercial fishing! This source of mortality should be a new [Flow Out] from the Anchovy population. For now, let’s assume harvest is constant – that is, a given number are harvested, regardless of the size of the population (no feedback!).</p></li>
 <li><p>One last thing before we play around with harvest rates: in the properties menu for the anchovy stock, set the property <strong>Only Positive Rates</strong> to “Yes”. We don’t want to harvest the population into negative numbers!!!</p></li>
-<li><p>Finally, try to find the <strong>maximum sustainable yield</strong>. That is, find the maximum harvest rate that yields a sustainable (non-declining) population. To do this, try different rates of harvest- I recommend using increments of 200 at first, then narrowing down to smaller increments. Otherwise you might be here a while!!</p></li>
+<li><p>Finally, try to find the <strong>maximum sustainable yield</strong>. That is, find the maximum harvest rate that yields a sustainable (non-declining) population. To do this, try different rates of harvest- I recommend using increments of 200 at first, then narrowing down to smaller increments. Otherwise you might be here a while!! [Optional: I encourage you to play around with the “Sensitivity Analysis tool”, which you could use to automate this process- that is, have Insightmaker run lots of different values for harvest rate at the same time! We will go over how to use this tool in lab next week or the week after]</p></li>
 </ol>
 <div id="questions-exercise-2" class="section level3">
 <h3>QUESTIONS, Exercise 2:</h3>
@@ -412,7 +412,8 @@ div.tocify {
 <p>2b. Does the harvest process change the <strong>carrying capacity</strong> for the Peruvian sardines? Explain your reasoning.</p>
 <p>2c. Does the MSY change if you reduce the initial population size down to 1,000 instead of 10,000? If so, what is the new MSY?</p>
 <p>2d. Does the MSY point represent a <strong>stable equilibrium</strong>? That is, does it return to that equilibrium even if you perturb the system? Why? Why not?</p>
-<p>2e. If you were managing this Peruvian anchovy system, would you recommend that catch limits be set at the MSY? Why or why not? (More generally, is the MSY really sustainable?) 2f. Think back to your Wildlife Ecology course (or refer to the Gotelli book!). If you know <span class="math inline">\(K\)</span> and <span class="math inline">\(r\)</span>, how can you analytically solve for <strong>Maximum Sustainable Yield</strong>? Show your calculation. Does your computed MSY match the MSY you found by trial-and-error? (note that <span class="math inline">\(r\)</span> in this case is the difference between the maximum birth rate and the minimum death rate!)</p>
+<p>2e. If you were managing this Peruvian anchovy system, would you recommend that catch limits be set at the MSY? Why or why not? (More generally, is the MSY really sustainable?)</p>
+<p>2f. Think back to your Wildlife Ecology course (or refer to the Gotelli book!). If you know <span class="math inline">\(K\)</span> and <span class="math inline">\(r\)</span>, how can you analytically solve for <strong>Maximum Sustainable Yield</strong>? Show your calculation. Does your computed MSY match the MSY you found by trial-and-error? (note that <span class="math inline">\(r\)</span> in this case is the difference between the maximum birth rate and the minimum death rate!)</p>
 </div>
 </div>
 <div id="exercise-3-fun-with-logistic-growth" class="section level2">
@@ -457,16 +458,17 @@ div.tocify {
 </div>
 <div id="checklist-for-lab-2-completion" class="section level2">
 <h2>Checklist for Lab 2 completion</h2>
-<p>*Please bundle the Word, Excel, and R code files into one Zip file and email to Professor Shoemaker and Margarete Walden. The InsightMaker models can be shared directly in InsightMaker (preferred) or you can take screenshots and bundle those pictures into the Zip file.</p>
-<p><strong><em>Due Feb. 3 at 11 am.</em></strong></p>
+<p>*Please bundle the Word, Excel, and R code files into one Zip file and email to Professor Shoemaker and Margarete Walden.</p>
+<p>The InsightMaker models should be shared directly in InsightMaker. The first step (of course) is to save your model! After you save the model you should see a link on the top left-hand corner, “Insight Access”. Click on that link, and a new window will pop up. Under “allow update access”, add a username (i.e., kevintshoemaker or waldenTA). click on the “Add User” button, and then click on “Submit”. Finally, send me and Margarete an email (through Webcampus or regular email) with the URL for your InsightMaker model(s).</p>
+<p><strong><em>Due Feb. 10 at 11 am.</em></strong></p>
 <ul>
 <li>Word document with short answers
 <ul>
 <li><strong>Exercise 1</strong>
 <ul>
-<li><em>Short answer (1a.)</em></li>
+<li><em>Short answer (1a.)</em><br />
+</li>
 <li><em>Short answer (1b.)</em></li>
-<li><em>Short answer (1c.)</em></li>
 </ul></li>
 <li><strong>Exercise 2</strong>
 <ul>
@@ -474,42 +476,27 @@ div.tocify {
 <li><em>Short answer (2b.)</em></li>
 <li><em>Short answer (2c.)</em></li>
 <li><em>Short answer (2d.)</em></li>
+<li><em>Short answer (2e.)</em></li>
+<li><em>Short answer (2f.)</em></li>
 </ul></li>
 <li><strong>Exercise 3</strong>
 <ul>
 <li><em>Short answer (3a.)</em></li>
 <li><em>Short answer (3b.)</em></li>
+<li><em>Short answer (3c.)</em></li>
+<li><em>Short answer (3d.)</em></li>
 </ul></li>
-</ul></li>
-<li>Excel file
+<li><strong>Exercise 4</strong>
 <ul>
-<li><strong>Exercise 1</strong>
-<ul>
-<li>Your Excel file should show that you were able to successfully use formulas to calculate <span class="math inline">\(N_t\)</span> for each time step and show a plot of <span class="math inline">\(N\)</span> by Time.</li>
-</ul></li>
-</ul></li>
-<li>R file
-<ul>
-<li><strong>Exercise 2</strong>
-<ul>
-<li>Your R code should show that you were able to (a) adapt the given code to run for 100 years, and can display a plot of the results;</li>
-<li><ol start="2" style="list-style-type: lower-alpha">
-<li>change <span class="math inline">\(r\)</span> to 0.5 and run for 100 years and plot the results;</li>
-</ol></li>
-<li><ol start="3" style="list-style-type: lower-alpha">
-<li>find the value of <span class="math inline">\(r\)</span> that gives a population size of 1000 after 100 years; and</li>
-</ol></li>
-<li><ol start="4" style="list-style-type: lower-alpha">
-<li>change <span class="math inline">\(r\)</span> to -0.1 and run until the population goes extinct.</li>
-</ol></li>
+<li><em>Short answer (4a.)</em></li>
+<li><em>Short answer (4b.)</em></li>
 </ul></li>
 </ul></li>
 <li>InsightMaker models
 <ul>
-<li><strong>Exercise 3</strong>
+<li><strong>Exercises 2,3 and 4</strong>
 <ul>
-<li><p>Your first model should show that you were able to alter the given model as instructed so that the simulation runs correctly. This should be shared with “kevintshoemaker” and “Margarete”.</p></li>
-<li><p>Your second model should include the Rand() function for the <em>Birth Rate</em> and <em>Death Rate</em>. This should be shared with “kevintshoemaker” and “Margarete”.</p></li>
+<li>Your models should show that you were able to create and specify your models correctly. This should be shared with “kevintshoemaker” and “Margarete”, and the URLs should be shared via email.</li>
 </ul></li>
 </ul></li>
 </ul>
